[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
validator = { version = "0.18.1", features = ["derive"] }
